# tbp.benchmarks

./: .gitignore  README.md  compare_benchmarks.py  pyproject.toml
configs/: README.md  configs_repo_repo.yaml  configs_repo_wandb.yaml  configs_wandb_repo.yaml  configs_wandb_wandb.yaml
src/tbp/: compare.py
