[build-system]
requires = ["setuptools >= 71.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbp.benchmarks"
version = "0.1.0"
description = "A tool for comparing tbp.monty benchmark runs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
compare = "tbp.compare:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
